--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <!-- header and footer -->
 <div id="header">แผนที่รายงานสถานการณ์น้ำ จากอ่างเก็บน้ำห้วยเชียงคำ ต.โนนราษี อ.บรบือ จ.มหาสารคาม เมื่อวันที่ 16 กรกฎาคม 2567</div>
 </div>
-<div id="footer">
+<div id="footer"><div id="infobtn">i</div>
   <p> หมายเหตุ : 
   <p> 1. ข้อมูลพื้นที่น้ำม่วม จาก Thailand Flood Monitoring System - Gistda
   <p> 2. ภูมิประเทศตกแต่งเพิ่มเติม เพื่อให้เห็นความสูงในพื้นที่ชัดเจนมากขึ้น (ในความเป็นจริงเป็นพื้นที่ราบลุ่ม)
